add shell movements

--- a/index.html
+++ b/index.html
@@ -7,47 +7,36 @@
   </head>
   <body>
     <div class="main">
-      <h1 class="gato-title">caca</h1>
+      <h1 class="gato-title">Gato Game</h1>
+      <div class="status"></div>
       <div class="gato">
-        <img class="gato-body" src="src/images/gato-body.svg" alt="" />
+        <img class="gato-body" src="src/images/gato-body.svg" />
         <img
           class="gato-eye-background"
           src="src/images/gato-eye-background.svg"
-          alt=""
         />
-
-        <img class="gato-eye-left" src="src/images/gato-eye-left.svg" alt="" />
+        <img class="gato-eye-left" src="src/images/gato-eye-left.svg" />
+        <img class="gato-eye-right" src="src/images/gato-eye-right.svg" />
+        <img class="gato-eye-frame" src="src/images/gato-eye-frame.svg" />
+        <img class="gato-eye-white-left" src="src/images/left-iris-white.svg" />
         <img
-          class="gato-eye-right"
-          src="src/images/gato-eye-right.svg"
-          alt=""
-        />
-        <img
-          class="gato-eye-frame"
-          src="src/images/gato-eye-frame.svg"
-          alt=""
-        />
-        <img
-          class="left-iris-white"
-          src="src/images/left-iris-white.svg"
-          alt=""
-        />
-        <img
-          class="right-iris-white"
+          class="gato-eye-white-right"
           src="src/images/right-iris-white.svg"
-          alt=""
         />
       </div>
+
       <div class="shells">
-        <ul>
-          <li>1</li>
-          <li>1</li>
-          <li>1</li>
-        </ul>
+        <img class="shell shell-1" src="src/images/shell.svg" />
+        <img class="shell shell-2" src="src/images/shell.svg" />
+        <img class="shell shell-3" src="src/images/shell.svg" />
       </div>
-      <div><button>Start</button></div>
     </div>
 
+    <div>
+      <button class="start-button">Start!</button>
+    </div>
+
+    <script src="util/point.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
