--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div class="main">
       <h1 class="gato-title">Gato Game</h1>
       <div class="status"></div>
-      <div class="gato">
+      <div class="gato center">
+        <img class="gato-tail-up" src="src/images/gato-tail-up.svg" />
         <img class="gato-body" src="src/images/gato-body.svg" />
         <img
           class="gato-eye-background"
@@ -23,17 +24,19 @@
           class="gato-eye-white-right"
           src="src/images/right-iris-white.svg"
         />
+        <img class="gato-nose-mouth" src="src/images/gato-nose-mouth.svg" />
+        <img class="gato-mustache" src="src/images/gato-mustache.svg" />
+        <img class="gato-legs-default" src="src/images/gato-legs-default.svg" />
       </div>
 
-      <div class="shells">
+      <div class="shells center">
         <img class="shell shell-1" src="src/images/shell.svg" />
         <img class="shell shell-2" src="src/images/shell.svg" />
         <img class="shell shell-3" src="src/images/shell.svg" />
       </div>
     </div>
-
-    <div>
-      <button class="start-button">Start!</button>
+    <div class="button-group">
+      <input type="button" class="start-button" value="Start" />
     </div>
 
     <script src="util/point.js"></script>
