--- a/index.html
+++ b/index.html
@@ -8,25 +8,71 @@
   <body>
     <div class="main">
       <h1 class="gato-title">Gato Game</h1>
-      <div class="status"></div>
+      <div class="status center"></div>
       <div class="gato center">
         <img class="gato-tail-up" src="src/images/gato-tail-up.svg" />
         <img class="gato-body" src="src/images/gato-body.svg" />
+        <img class="eye-background" src="src/images/eye-background.svg" />
         <img
-          class="gato-eye-background"
-          src="src/images/gato-eye-background.svg"
+          class="eyeball-default-left"
+          src="src/images/eyeball-default-left.svg"
         />
-        <img class="gato-eye-left" src="src/images/gato-eye-left.svg" />
-        <img class="gato-eye-right" src="src/images/gato-eye-right.svg" />
-        <img class="gato-eye-frame" src="src/images/gato-eye-frame.svg" />
-        <img class="gato-eye-white-left" src="src/images/left-iris-white.svg" />
         <img
-          class="gato-eye-white-right"
-          src="src/images/right-iris-white.svg"
+          class="eyeball-default-right"
+          src="src/images/eyeball-default-right.svg"
         />
-        <img class="gato-nose-mouth" src="src/images/gato-nose-mouth.svg" />
+
+        <img
+          class="eyeball-down-left hide"
+          src="src/images/eyeball-down-left.svg"
+        />
+
+        <img
+          class="eyeball-down-right hide"
+          src="src/images/eyeball-down-right.svg"
+        />
+
+        <img
+          class="eyeball-dots-default-left"
+          src="src/images/eyeball-dots-default-left.svg"
+        />
+        <img
+          class="eyeball-dots-default-right"
+          src="src/images/eyeball-dots-default-right.svg"
+        />
+        <img
+          class="eyeball-dots-down-left hide"
+          src="src/images/eyeball-dots-down-left.svg"
+        />
+        <img
+          class="eyeball-dots-down-right hide"
+          src="src/images/eyeball-dots-down-right.svg"
+        />
+        <img src="src/images/funky-eyes.svg" class="funky-eyes hide" />
+        <!-- <img src="src/images/funky-eye-left.svg" class="funky-eye-left hide" />
+        <img
+          src="src/images/funky-eye-right.svg"
+          class="funky-eye-right hide"
+        /> -->
+        <img class="default-eyeframe" src="src/images/default-eyeframe.svg" />
+        <img src="src/images/funky-eyeframe.svg" class="funky-eyeframe hide" />
+        <img
+          class="shuffling-eyeframe hide"
+          src="src/images/shuffling-eyeframe.svg"
+        />
+        <img
+          class="nose-mouth-default"
+          src="src/images/nose-mouth-default.svg"
+        />
+        <img
+          class="nose-mouth-snarky hide"
+          src="src/images/nose-mouth-snarky.svg"
+        />
         <img class="gato-mustache" src="src/images/gato-mustache.svg" />
-        <img class="gato-legs-default" src="src/images/gato-legs-default.svg" />
+        <img class="legs-default" src="src/images/legs-default.svg" />
+        <img src="src/images/legs-left.svg" class="legs-left hide" />
+        <img src="src/images/legs-center.svg" class="legs-center hide" />
+        <img src="src/images/legs-right.svg" class="legs-right hide" />
       </div>
 
       <div class="shells center">
