--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           class="nose-mouth-snarky hide"
           src="src/images/nose-mouth-snarky.svg"
         />
-        <img class="gato-mustache" src="src/images/gato-mustache.svg" />
+        <img class="mustache" src="src/images/mustache.svg" />
         <img class="legs-default" src="src/images/legs-default.svg" />
         <img src="src/images/legs-left.svg" class="legs-left hide" />
         <img src="src/images/legs-center.svg" class="legs-center hide" />
