--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="main">
-      <div class="center">
+      <div class="center align-status">
         <h1 class="status"></h1>
       </div>
       <div class="gato center">
@@ -85,7 +85,6 @@
         <img class="shell shell-2" src="src/images/shell.svg" />
         <img class="shell shell-3" src="src/images/shell.svg" />
         <img class="shell shell-open hide" src="src/images/shell-open.svg" />
-        <img src="src/images/treat.svg" class="treat hide" />
       </div>
     </div>
     <div class="footer">
