--- a/index.html
+++ b/index.html
@@ -15,54 +15,43 @@
         <h1 class="status"></h1>
       </div>
       <div class="gato center">
-        <img class="gato-tail-up" src="src/images/gato-tail-up.svg" />
+        <img class="tail-up" src="src/images/gato-tail-up.svg" />
         <img class="gato-body" src="src/images/gato-body.svg" />
         <img class="eye-background" src="src/images/eye-background.svg" />
-        <img
-          class="eyeball-default-left"
-          src="src/images/eyeball-default-left.svg"
-        />
-        <img
-          class="eyeball-default-right"
-          src="src/images/eyeball-default-right.svg"
-        />
+        <img class="eye-left" src="src/images/eyeball-default-left.svg" />
+        <img class="eye-right" src="src/images/eyeball-default-right.svg" />
 
         <img
-          class="eyeball-down-left hide"
+          class="eye-left-down hide"
           src="src/images/eyeball-down-left.svg"
         />
 
         <img
-          class="eyeball-down-right hide"
+          class="eye-right-down hide"
           src="src/images/eyeball-down-right.svg"
         />
 
         <img
-          class="eyeball-dots-default-left"
+          class="eye-dots-default-left"
           src="src/images/eyeball-dots-default-left.svg"
         />
         <img
-          class="eyeball-dots-default-right"
+          class="eye-dots-default-right"
           src="src/images/eyeball-dots-default-right.svg"
         />
         <img
-          class="eyeball-dots-down-left hide"
+          class="eye-dots-down-left hide"
           src="src/images/eyeball-dots-down-left.svg"
         />
         <img
-          class="eyeball-dots-down-right hide"
+          class="eye-dots-down-right hide"
           src="src/images/eyeball-dots-down-right.svg"
         />
         <img src="src/images/funky-eyes.svg" class="funky-eyes hide" />
-        <!-- <img src="src/images/funky-eye-left.svg" class="funky-eye-left hide" />
+        <img class="default-eye-frame" src="src/images/default-eyeframe.svg" />
+        <img src="src/images/funky-eyeframe.svg" class="funky-eye-frame hide" />
         <img
-          src="src/images/funky-eye-right.svg"
-          class="funky-eye-right hide"
-        /> -->
-        <img class="default-eyeframe" src="src/images/default-eyeframe.svg" />
-        <img src="src/images/funky-eyeframe.svg" class="funky-eyeframe hide" />
-        <img
-          class="shuffling-eyeframe hide"
+          class="shuffling-eye-frame hide"
           src="src/images/shuffling-eyeframe.svg"
         />
         <img
@@ -91,6 +80,8 @@
       <button class="start-button">Start</button>
     </div>
 
+    <script src="util/strings.js"></script>
+    <script src="util/sprites.js"></script>
     <script src="util/point.js"></script>
     <script src="index.js"></script>
   </body>
