--- a/index.html
+++ b/index.html
@@ -10,74 +10,82 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="main">
-      <div class="center align-status">
-        <h1 class="status"></h1>
+    <div class="page">
+        <div class="center align-status">
+          <h1 class="status"></h1>
+        </div>
+        <div class="gato center">
+          <img class="tail-up" src="src/images/tail.svg" />
+          <img class="body" src="src/images/body.svg" />
+          <img class="eye-background" src="src/images/eye-background.svg" />
+          <img class="eye-left" src="src/images/eyeball-default-left.svg" />
+          <img class="eye-right" src="src/images/eyeball-default-right.svg" />
+
+          <img
+            class="eye-left-down hide"
+            src="src/images/eyeball-down-left.svg"
+          />
+
+          <img
+            class="eye-right-down hide"
+            src="src/images/eyeball-down-right.svg"
+          />
+
+          <img
+            class="eye-dots-default-left"
+            src="src/images/eyeball-dots-default-left.svg"
+          />
+          <img
+            class="eye-dots-default-right"
+            src="src/images/eyeball-dots-default-right.svg"
+          />
+          <img
+            class="eye-dots-down-left hide"
+            src="src/images/eyeball-dots-down-left.svg"
+          />
+          <img
+            class="eye-dots-down-right hide"
+            src="src/images/eyeball-dots-down-right.svg"
+          />
+          <img src="src/images/funky-eyes.svg" class="funky-eyes hide" />
+          <img
+            class="default-eye-frame"
+            src="src/images/default-eyeframe.svg"
+          />
+          <img
+            src="src/images/funky-eyeframe.svg"
+            class="funky-eye-frame hide"
+          />
+          <img
+            class="shuffling-eye-frame hide"
+            src="src/images/shuffling-eyeframe.svg"
+          />
+          <img
+            class="nose-mouth-default"
+            src="src/images/nose-mouth-default.svg"
+          />
+          <img
+            class="nose-mouth-snarky hide"
+            src="src/images/nose-mouth-snarky.svg"
+          />
+          <img class="mustache" src="src/images/mustache.svg" />
+          <img class="legs-default" src="src/images/legs-default.svg" />
+          <img src="src/images/legs-left.svg" class="legs-left hide" />
+          <img src="src/images/legs-center.svg" class="legs-center hide" />
+          <img src="src/images/legs-right.svg" class="legs-right hide" />
+        </div>
+        <div class="shells center">
+          <img class="shell shell-1" src="src/images/shell.svg" />
+          <img class="shell shell-2" src="src/images/shell.svg" />
+          <img class="shell shell-3" src="src/images/shell.svg" />
+          <img class="shell shell-open hide" src="src/images/shell-open.svg" />
+        </div>
+        <div class="dog center">
+          <img src="src/images/dog.svg" />
+        </div>
       </div>
-      <div class="gato center">
-        <img class="tail-up" src="src/images/gato-tail-up.svg" />
-        <img class="gato-body" src="src/images/gato-body.svg" />
-        <img class="eye-background" src="src/images/eye-background.svg" />
-        <img class="eye-left" src="src/images/eyeball-default-left.svg" />
-        <img class="eye-right" src="src/images/eyeball-default-right.svg" />
 
-        <img
-          class="eye-left-down hide"
-          src="src/images/eyeball-down-left.svg"
-        />
-
-        <img
-          class="eye-right-down hide"
-          src="src/images/eyeball-down-right.svg"
-        />
-
-        <img
-          class="eye-dots-default-left"
-          src="src/images/eyeball-dots-default-left.svg"
-        />
-        <img
-          class="eye-dots-default-right"
-          src="src/images/eyeball-dots-default-right.svg"
-        />
-        <img
-          class="eye-dots-down-left hide"
-          src="src/images/eyeball-dots-down-left.svg"
-        />
-        <img
-          class="eye-dots-down-right hide"
-          src="src/images/eyeball-dots-down-right.svg"
-        />
-        <img src="src/images/funky-eyes.svg" class="funky-eyes hide" />
-        <img class="default-eye-frame" src="src/images/default-eyeframe.svg" />
-        <img src="src/images/funky-eyeframe.svg" class="funky-eye-frame hide" />
-        <img
-          class="shuffling-eye-frame hide"
-          src="src/images/shuffling-eyeframe.svg"
-        />
-        <img
-          class="nose-mouth-default"
-          src="src/images/nose-mouth-default.svg"
-        />
-        <img
-          class="nose-mouth-snarky hide"
-          src="src/images/nose-mouth-snarky.svg"
-        />
-        <img class="mustache" src="src/images/mustache.svg" />
-        <img class="legs-default" src="src/images/legs-default.svg" />
-        <img src="src/images/legs-left.svg" class="legs-left hide" />
-        <img src="src/images/legs-center.svg" class="legs-center hide" />
-        <img src="src/images/legs-right.svg" class="legs-right hide" />
-      </div>
-
-      <div class="shells center">
-        <img class="shell shell-1" src="src/images/shell.svg" />
-        <img class="shell shell-2" src="src/images/shell.svg" />
-        <img class="shell shell-3" src="src/images/shell.svg" />
-        <img class="shell shell-open hide" src="src/images/shell-open.svg" />
-      </div>
-    </div>
-    <div class="footer">
-      <button class="start-button">Start</button>
+        <button class="start-button">Start</button>
     </div>
 
     <script src="util/strings.js"></script>
