--- a/index.html
+++ b/index.html
@@ -11,24 +11,22 @@
   </head>
   <body>
     <div class="page">
-        <div class="center align-status">
-          <h1 class="status"></h1>
-        </div>
-        <div class="gato center">
+      <div class="sidebar">
+        <h1 class="status"></h1>
+        <button class="start-button">Start</button>
+      </div>
+      <div class="main">
+        <div class="gato">
           <img class="tail-up" src="src/images/tail.svg" />
           <img class="body" src="src/images/body.svg" />
           <img class="eye-background" src="src/images/eye-background.svg" />
           <img class="eye-left" src="src/images/eyeball-default-left.svg" />
           <img class="eye-right" src="src/images/eyeball-default-right.svg" />
-
-          <img
-            class="eye-left-down hide"
-            src="src/images/eyeball-down-left.svg"
-          />
+          <img class="eye-left-down hide" src="src/images/eye-left-down.svg" />
 
           <img
             class="eye-right-down hide"
-            src="src/images/eyeball-down-right.svg"
+            src="src/images/eye-right-down.svg"
           />
 
           <img
@@ -74,18 +72,13 @@
           <img src="src/images/legs-center.svg" class="legs-center hide" />
           <img src="src/images/legs-right.svg" class="legs-right hide" />
         </div>
-        <div class="shells center">
+        <div class="shells">
           <img class="shell shell-1" src="src/images/shell.svg" />
           <img class="shell shell-2" src="src/images/shell.svg" />
           <img class="shell shell-3" src="src/images/shell.svg" />
           <img class="shell shell-open hide" src="src/images/shell-open.svg" />
         </div>
-        <div class="dog center">
-          <img src="src/images/dog.svg" />
-        </div>
       </div>
-
-        <button class="start-button">Start</button>
     </div>
 
     <script src="util/strings.js"></script>
