split into game states

--- a/index.html
+++ b/index.html
@@ -82,8 +82,19 @@
     </div>
 
     <script src="util/strings.js"></script>
+    <script src="util/gameState.js"></script>
     <script src="util/sprites.js"></script>
     <script src="util/point.js"></script>
+    <script src="util/orbit.js"></script>
+
+    <script src="sprites/gato.js"></script>
+    <script src="sprites/shells.js"></script>
+
+    <script src="states/gameIdle.js"></script>
+    <script src="states/gatoIdling.js"></script>
+    <script src="states/gameShuffling.js"></script>
+    <script src="states/gameReveal.js"></script>
+
     <script src="index.js"></script>
   </body>
 </html>
