--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <script src="util/sprites.js"></script>
     <script src="util/point.js"></script>
     <script src="util/orbit.js"></script>
+    <script src="util/message.js"></script>
 
     <script src="sprites/gato.js"></script>
     <script src="sprites/shells.js"></script>
