add more expressions

--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
             src="src/images/default-eyeframe.svg"
           />
           <img
+            class="shocked-eye-frame hide"
+            src="src/images/shocked-eyeframe.svg"
+          />
+          <img
+            class="ultra-shocked-eyes hide"
+            src="src/images/ultra-shocked-eyes.svg"
+          />
+          <img class="shocked-eyes hide" src="src/images/shocked-eyes.svg" />
+          <img class="innocent-eyes hide" src="src/images/innocent-eyes.svg" />
+
+          <img
             src="src/images/funky-eyeframe.svg"
             class="funky-eye-frame hide"
           />
@@ -92,8 +103,8 @@
     <script src="sprites/shells.js"></script>
 
     <script src="states/gameIdle.js"></script>
-    <script src="states/gatoIdling.js"></script>
     <script src="states/gameShuffling.js"></script>
+    <script src="states/gatoSelects.js"></script>
     <script src="states/gameReveal.js"></script>
 
     <script src="index.js"></script>
