--- a/index.html
+++ b/index.html
@@ -17,18 +17,11 @@
       </div>
       <div class="main">
         <div class="gato">
-          <img class="tail-up" src="src/images/tail.svg" />
+          <img class="tail" src="src/images/tail.svg" />
           <img class="body" src="src/images/body.svg" />
           <img class="eye-background" src="src/images/eye-background.svg" />
           <img class="eye-left" src="src/images/eyeball-default-left.svg" />
           <img class="eye-right" src="src/images/eyeball-default-right.svg" />
-          <img class="eye-left-down hide" src="src/images/eye-left-down.svg" />
-
-          <img
-            class="eye-right-down hide"
-            src="src/images/eye-right-down.svg"
-          />
-
           <img
             class="eye-dots-default-left"
             src="src/images/eyeball-dots-default-left.svg"
@@ -37,14 +30,7 @@
             class="eye-dots-default-right"
             src="src/images/eyeball-dots-default-right.svg"
           />
-          <img
-            class="eye-dots-down-left hide"
-            src="src/images/eyeball-dots-down-left.svg"
-          />
-          <img
-            class="eye-dots-down-right hide"
-            src="src/images/eyeball-dots-down-right.svg"
-          />
+          <img class="shuffling-eyes" src="src/images/shuffling-eyes.svg" />
           <img src="src/images/funky-eyes.svg" class="funky-eyes hide" />
           <img
             class="default-eye-frame"
