add tweener lib, easing lib and apply to eyes and tails in idle state

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     <script src="util/point.js"></script>
     <script src="util/orbit.js"></script>
     <script src="util/message.js"></script>
+    <script src="util/easing.js"></script>
+    <script src="util/tweener.js"></script>
 
     <script src="sprites/gato.js"></script>
     <script src="sprites/shells.js"></script>
@@ -92,7 +94,6 @@
     <script src="states/gameShuffling.js"></script>
     <script src="states/gatoSelects.js"></script>
     <script src="states/gameReveal.js"></script>
-
     <script src="index.js"></script>
   </body>
 </html>
